[package]
name = "arbiter_template"
version = "0.1.0"
edition = "2021"

[dependencies]
arbiter-core = { git = "https://github.com/primitivefinance/arbiter", branch = "feat/simple" }
ethers = { git = "https://github.com/primitivefinance/ethers-rs" }


m3-rs = { git = "https://github.com/primitivefinance/m3-rs.git" }
tokio = { version = "1.28.1", features = ["macros", "full"] }
bytes = "1.4.0"
hex = { version = "0.4.3", default-features = false }
revm = "3.3.0"
ruint = "1.8.0"
polars = "0.31.1"
serde = { version = "1.0.163", features= ["derive"]}
clap = { version = "4.3.0", features = ["derive"] }
visualize = {git = "https://github.com/primitivefinance/visualization-rs.git", branch = "alex/copy-traits"}
itertools-num = "0.1.3"
statrs = "0.16.0"
anyhow = "1.0.72"
colored = "2.0.4"
chrono = "0.4.26"
config = "0.13.3"
serde_derive = "1.0.180"
